@@ -40,7 +40,9 @@ Incompatible changes in 6.0 version:
     Variable "iunigk" deleted (contained unit for I/O of indices).
   * "nbnd_occ" variable is now dynamically allocated
   * Duplicated and confusing "outdir" variable removed from "io_files"
-  * Due to frequent problems with mailers, "make.sys" is now "make.inc"
+  * Due to frequent problems with mailers, "make.sys" is renamed "make.inc"
+  * "allocate_fft" no longer calls "data_structure" to compute dimensions
+    of the various grids: it just allocates FFT arrays
 
                                * * * * *
 
